# rdp_2fa_provider

./: Cargo.toml  agent.MD  register.reg
docs/: lsa_token_profile_strategy.md  vm_validation_checklist.md
scripts/: register_lsa_auth_package.ps1  test_vm_registration_state.ps1  unregister_lsa_auth_package.ps1
src/: CPipeListener.rs  CSampleCredential.rs  CSampleProvider.rs  Pipe.rs  lib.rs  lsa_package.rs  test.rs
src/auth/: action.rs  error.rs  mod.rs  mode.rs  package.rs  service.rs  session.rs  state.rs  verification.rs
src/lsa/: account.rs  memory.rs  mod.rs  package.rs  profile.rs  token.rs
src/ui_model/: field_id.rs  field_state.rs  mod.rs  view_state.rs
